@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020171205"
-#define public MagickPackageReleaseDate "snapshot-20171205"
+#define public MagickPackageVersionAddendum ".020171206"
+#define public MagickPackageReleaseDate "snapshot-20171206"
